--- a/index.html
+++ b/index.html
@@ -9,20 +9,54 @@
 </head>
 <body>
     <header class="header">
-        <div class="logo">
-            IC "Repair Design Project"
+        <div class="container header-content">
+            <div class="logo">
+                    IC "Repair Design Project"
+                </div>
+                <nav>
+                    <ul class="header-nav">
+                        <li class="header-nav_item"><a href="#">HOME</a></li>
+                        <li class="header-nav_item"><a href="#">PROJECTS</a></li>
+                        <li class="header-nav_item"><a href="#">MEASUREMENT</a></li>
+                        <li class="header-nav_item"><a href="#">TEAM</a></li>
+                        <li class="header-nav_item"><a href="#">REVIEWS</a></li>
+                        <li class="header-nav_item"><a href="#">CONTACTS</a></li>
+                    </ul>                  
+                </nav>
+                <div class="tel">
+                    +7 (928) 768-32-39
+                </div> 
+                <button class="button">Request a call</button>
+            </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">PROJECTS</a></li>
-                <li><a href="#">MEASUREMENT</a></li>
-                <li><a href="#">TEAM</a></li>
-                <li><a href="#">REVIEWS</a></li>
-                <li><a href="#">CONTACTS</a></li>
-            </ul>
-        <button class="button">Request a call</button>
-        </nav>
     </header>
+<main>
+    <div class="preview-container">
+        <div class="preview">
+            <div class="preview-overlay"></div>
+        </div>
+        <h1 class="preview-text">Turnkey Repair in the city of <span style="color:#E3B873">Rostov-on-Don</span>
+            <p class="preview-discription">
+                Get ready-made turnkey repairs on time <br>with work time saving up to 45 days and 20% from</br> cost of materials due to the organization of work
+            </p>
+            <button class="button-preview-cost">calculate the cost</button>
+            <button class="button-preview-application">submit your application</button>
+        </h1>
+    </div>
+    <div class="complete">
+        <div class="complete-container">
+            <div class="projects-discription">
+                <h1 class="title-complete">Completed projects
+                    <p class="content-projects">
+                        Only a small part of the work performed by our company is presented on the site. For 14 years on in the construction market we have made happy more than 1000 families
+                    </p>
+                </h1>
+                
+            </div>
+            <div class="complete-img"></div>
+        </div>
+    </div>
+    
+</main>
 </body>
 </html>
