adjusting blocks position, added arrow

--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
                         <p class="text3">3.5 months</p></h2>
                     <h2 class="title4">REPAIR COST:
                         <p class="text4">Upon request </p>  </h2>  
-                </div>  
+                </div> 
+                <div class="slider-container">
+                    <div class="arrow-1">
+                        <div></div>
+                    </div>
+                </div> 
             </div>
             
             <div class="projects-discription">
